--- a/Django/W3 Introduction to Django/Module 10/simple_page_navigation/templates/home.html
+++ b/Django/W3 Introduction to Django/Module 10/simple_page_navigation/templates/home.html
@@ -6,7 +6,7 @@
         <title>Home</title>
     </head>
     <body>
-        <h1>Home</h1>
+        <h1><a href="/">Home</a></h1>
         <h1>First App / About</h1>
         <h1>First App / Contact</h1>
     </body>
